# hw-project-01

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml
