[project]
name = "hw-project-01"
version = "0.1.0"
description = ""
authors = [
    {name = "v.zajczev",email = "v.zajczev@globus.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hw_project_01", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 40

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
